Change gap to prevent overlapping of the display lines

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: flex-end;
-    gap: 2px;
+    gap: 12px;
     padding: 1px 8px;
 }
 
